--- a/wp-content/themes/snf/styles/css/cpt/products.css
+++ b/wp-content/themes/snf/styles/css/cpt/products.css
@@ -6,7 +6,28 @@
     III.) Filter
 
 ======================================================*/
-
+.user_market_selection .card{
+    border-bottom:solid 5px #002d73;
+}
+.user_market_selection .card-footer{
+    display: inline-flex;
+    justify-content:center;
+    align-items:center;
+    /* height: 100%; */overflow: hidden;position: relative;}
+.user_market_selection .card:hover .card-footer h3{
+}
+.user_market_selection h2{
+    font-weight: 600;
+    font-size: 1.25rem;
+    color:#002d73;
+    margin: 0;}
+.user_market_selection h3{
+    font-size:1.0rem;
+    color:#6c757d;
+    margin: 0;}
+.user_market_selection img{
+    height:30px;
+}
 .products-grouping .product-tag h4.panel-title{
     padding: 7px 0;sv
 display: flex;justify-content: center;align-items: center;}
@@ -75,6 +96,10 @@ display: flex;justify-content: center;align-items: center;}
     padding:0;
     position:relative;
 }
+.single .products-grouping .card-footer{
+    padding: .75rem 1.25rem;
+    position:relative;
+}
 .products-grouping .card-footer .panel-title{
     margin: 0px 0;
     /* padding: 10px 0; */}
@@ -116,7 +141,7 @@ display: flex;justify-content: center;align-items: center;}
     list-style: none;}
 .product_market_selection.overlay{
     position: absolute;
-    background-color: #f3f1eb;
+    /* background-color: #f3f1eb; */
     height: 100%;
     width:100%;
     left: 0;top: 0;z-index: 3;display: block;
@@ -127,7 +152,6 @@ display: flex;justify-content: center;align-items: center;}
     align-items: center;
     position: relative;
     z-index: 6;
-
     /* height: 100%; *//* width: 100%; */}
 .market_background .card-body h3{
     color:#fff;
@@ -135,8 +159,72 @@ display: flex;justify-content: center;align-items: center;}
 }
 .app-useage h3{
     color: rgb(10,42,118);
-
 }
 .tax-markets img{
     height:50px;
+}
+.user_market_selection .card-footer svg{
+    /* width: 100px; */
+    height: auto;
+    margin: 0 2rem;
+    cursor: pointer;
+    overflow: visible;
+    fill: #6c757d;
+}
+.user_market_selection svg polygon, .user_market_selection svg path {
+    transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1);
+    background-color: #6c757d!important;
+}
+.user_market_selection a:hover polygon, .user_market_selection a:hover path {
+    transition: all 1s cubic-bezier(.2,1,.3,1);
+    fill: rgb(10,190,194);
+}
+.user_market_selection a:hover h3{
+    color:rgb(10,190,194);
+}
+.user_market_selection a:hover .arrow {
+    animation: arrow-anim 2.5s cubic-bezier(.2,1,.3,1); infinite;
+}
+.user_market_selection .card-footer a:hover .arrow-fixed {
+    animation: arrow-fixed-anim 2.5s cubic-bezier(.2,1,.3,1); infinite;
+}
+@keyframes arrow-anim {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    5% {
+        transform: translateX(-0.1rem);
+    }
+    100% {
+        transform: translateX(1rem);
+        opacity: 0;
+    }
+}
+
+@keyframes arrow-fixed-anim {
+    5% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0.4;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+single-products .product_terms{
+    display:flex;
+    /* justify-content:center; */
+    align-items:center;
+    /* height:100%; */
+}
+.single-products .product_terms h4{
+    font-size:1.15rem;
+}
+.single-products  .product_terms{
+    display:flex;
+    align-items:center;
+    width:100%;
 }
