--- a/wp-content/themes/snf/styles/css/global.css
+++ b/wp-content/themes/snf/styles/css/global.css
@@ -410,11 +410,14 @@ Common Classes
     Inner Specific
 ======================================================*/
 
-.site-content .contact-bar.bg-fixed {
-    background-attachment: fixed;
+.site-content .contact-bar .contact_bg_bar {
+
     position: relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
-.site-content .contact-bar.bg-fixed::before{
+.site-content .contact-bar .contact_bg_bar::before{
     position: absolute;
     content: '';
     top: 0;
@@ -428,24 +431,30 @@ Common Classes
 .site-content section.contact-bar  {
     margin: 30px 0px 30px 0px;
     /* padding-top: 7rem; */
-    /* padding-bottom: 7rem; */
+    overflow: hidden;
     display: flex;
-    border-bottom: none;
-    background-position: center center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* border-bottom: none; */
+    /* background-position: center center; */
+    /* -webkit-background-size: cover; */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
     justify-content: center;
     align-items: center;
     width: 100%;
-    border-radius: 4px;}
+    /* border-radius: 4px; */}
+.contact_bg_bar{
+    background-position:center;
+    background-size:cover;
+    height:25vh;
+    background-attachment: fixed;
+    /* display: flex; */width: 100%;/* height: 100%; */}
 .site-content .contact-bar .section-header {
     text-align: center;
-    /* max-width: 70%; */
-    margin: 3rem;
+    padding: 3rem;
+    justify-content: center;
     z-index: 99;
     position: relative;
-}
+    /* height: 100%; */align-items: center;/* width: 100%; */}
 .site-content .contact-bar .section-header h2{
     z-index: 9;
     text-transform: uppercase;
@@ -454,6 +463,10 @@ Common Classes
     text-shadow: 2px 4px 3px rgba(0,0,0,0.3);}
 .site-content .site-cta-container{
 }
+.flexible-layout .section-header a.btn-outline-light:hover{
+
+    background-color: transparent;}
+
 /*===================================================
     Flexible Content
 ======================================================*/
